--- a/src/locales/en.json
+++ b/src/locales/en.json
@@ -178,8 +178,8 @@
     "cam.setup": "Camera Setup:",
     "cam.focal": "Focal length (35mm eq.):",
     "cam.exposure": "Exposure time:",
-    "cam.f-number": "F-number:",
-    "cam.iso": "ISO:",
+    "cam.f-number": "Focal ratio:",
+    "cam.iso": "Film speed:",
     "cam.lat": "Latitude:",
     "cam.lon": "Longitude:",
     "cam.goto": "Locate with:"
