More mobile friendly

--- a/src/locales/en.json
+++ b/src/locales/en.json
@@ -1,7 +1,7 @@
 {
     "about": "About",
     "about.tooltip": "Find out more",
-    "about.title": "Clément's Digital Garden",
+    "about.title": "Clément's Garden",
     "about.me.title": "About Me",
     "about.me": "My name is Clement. I take photos of the untouched nature and notes of my adventures. I found myself in the middle of nowhere, fighting the elements and crash testing my resiliency. I hitchhiked more than 40,000 km and spent hundreds days through deserts, roads, rainforests, villages, lifestyles. You can consider me as adventurer, engineer, wilderness and human explorer. But I am not gifted and you can do the same, chase your dreams! We all need a purpose in life. Mine is to live my greatest dreams in the simplest possible way, and share them. In my sedentary life, I like building technical things. Indeed, I made this website from scratch. Enjoy your visit in my digital garden!",
     "about.pledge": "Photography is my exploration tool in a way to widen our horizon toward remote wilderness. I prove with photos that the most beautiful things are natural. But photos do not keep snow on tops, native forests, wildlife, crystal clear rivers, pure mountain lakes. It's up to us to think and act sustainably so that beauty is beyond all and nature perpetual.",
