--- a/src/locales/fi.json
+++ b/src/locales/fi.json
@@ -1,7 +1,7 @@
 {
     "about": "Tietoja",
     "about.tooltip": "Lue lisää",
-    "about.title": "Clémentin digitaalinen puutarha",
+    "about.title": "Clémentin puutarha",
     "about.me.title": "Minusta",
     "about.me": "Nimeni on Clement. Otan valokuvia koskemattomasta luonnosta ja muistiinpanoja seikkailuistani. Löysin itseni keskeltä ei-mitään, taistelemassa elementtejä vastaan ja törmäystesteissä kestävyyttäni. Liftasin yli 40 000 kilometriä ja vietin satoja päiviä läpi aavikoiden, teiden, sademetsien, kylien ja elämäntapojen. Minua voi pitää seikkailijana, insinöörinä, erämaan ja ihmisen tutkimusmatkailijana. Mutta en ole lahjakas, ja sinä voit tehdä samoin, jahdata unelmiasi! Me kaikki tarvitsemme tarkoituksen elämässä. Minun tarkoitukseni on elää suurimpia unelmiani mahdollisimman yksinkertaisella tavalla ja jakaa ne. Istuvassa elämässäni pidän teknisten asioiden rakentamisesta. Itse asiassa tein tämän verkkosivuston tyhjästä. Nauti vierailustasi digitaalisessa puutarhassani!",
     "about.pledge": "Valokuvaus on minun tutkimustyökaluni tavalla, joka laajentaa horisonttiamme kohti syrjäistä erämaata. Todistan valokuvilla, että kauneimmat asiat ovat luonnollisia. Mutta valokuvat eivät pidä lunta huipuilla, alkuperäisiä metsiä, villieläimiä, kristallinkirkkaita jokia, puhtaita vuoristojärviä. Meidän tehtävämme on ajatella ja toimia kestävästi niin, että kauneus on yli kaiken ja luonto ikuinen.",
