--- a/src/locales/en.json
+++ b/src/locales/en.json
@@ -57,6 +57,7 @@
     "privacy.third-parties.cdn": "Some scripts are delivered by",
     "privacy.third-parties.gif": "Funny animations are delivered by",
     "privacy.third-parties.captcha": "Spam and abuse protection by",
+    "privacy.third-parties.analytics": "Analytics provided by",
     "privacy.contact": "Should you need more enlightenment, please feel free to use the contact form.",
     "social-networks": "Social Networks",
     "visitors-book": "Visitors' Book",
