--- a/src/locales/fi.json
+++ b/src/locales/fi.json
@@ -57,6 +57,7 @@
     "privacy.third-parties.cdn": "Jotkin skriptit toimittaa",
     "privacy.third-parties.gif": "Hauskoja animaatioita toimittaa",
     "privacy.third-parties.captcha": "Roskapostin ja väärinkäytön suojattu",
+    "privacy.third-parties.analytics": "Analytiikka toimittaa",
     "privacy.contact": "Jos tarvitset lisävalaistusta, käytä yhteydenottolomaketta.",
     "social-networks": "Sosiaaliset verkostot",
     "visitors-book": "Vieraskirja",
