--- a/src/locales/fr.json
+++ b/src/locales/fr.json
@@ -57,6 +57,7 @@
     "privacy.third-parties.cdn": "Certains scripts sont fournis par",
     "privacy.third-parties.gif": "Les chouettes animations sont fournis par",
     "privacy.third-parties.captcha": "Protection contre le spam et les abus par",
+    "privacy.third-parties.analytics": "Les statistiques sont fournis par",
     "privacy.contact": "Si t'as besoin de plus d'informations, n'hésites pas à utiliser le formulaire de contact.",
     "social-networks": "Réseaux sociaux",
     "visitors-book": "Livre d'or",
