--- a/src/locales/fr.json
+++ b/src/locales/fr.json
@@ -77,7 +77,7 @@
     "last.tooltip": "La toute première photo",
     "previous.tooltip": "Précédent",
     "loading.tooltip": "Chargement",
-    "album-progress": "Progrès dans :",
+    "album-progress": "Progression dans l'album photo :",
     "applause.feedback.pass": "Merci de tes applaudissements ! 😊",
     "applause.feedback.fail": "Arf, quelque chose à mal tourné ! \uD83D\uDE15 Essaie à nouveau plus tard.",
     "applause.feedback.fail.429": "Désolé, c'est trop d'amour pour un seul homme ! 😱 Essaie plus tard.",
