--- a/src/locales/fi.json
+++ b/src/locales/fi.json
@@ -27,9 +27,10 @@
     "subscribe": "Tilaa",
     "unsubscribe": "Peruuttaa tilauksen",
     "rss-feed": "RSS-syöte",
-    "copyright.title": "Tekijänoikeus",
-    "copyright.content": "Sivuston sisältö on saatavilla",
-    "copyright.source": "Sivuston lähdekoodi on saatavilla",
+    "copyright": "Tekijänoikeus",
+    "copyright.under": "on saatavilla",
+    "copyright.content": "Sivuston sisältö {{copyright.under}}",
+    "copyright.source": "Sivuston lähdekoodi {{copyright.under}}",
     "copyright.third-parties.link": "muut",
     "copyright.third-parties.title": "Kolmannen osapuolen lisensoitu sisältö",
     "copyright.third-parties.details": "Tämä sivusto sisältää seuraavat kuvat.",
@@ -37,9 +38,14 @@
     "copyright.third-parties.license": "Lisenssi",
     "copyright.third-parties.icon": "Icon",
     "copyright.third-parties.icon.creator": "Valmistanut",
-    "copyright.third-parties.icon.distributor": "osoitteesta",
+    "from": "osoitteesta",
     "copyright.third-parties.from": "Osoitteesta",
     "copyright.third-parties.ionicons": "Muut kuvakkeet: ",
+    "copyright.agreed": "Sitoudun noudattamaan lisenssiä.",
+    "download.title": "Lataa täysikokoinen valokuva",
+    "download.photo": "Lataa valokuva",
+    "download.signature": "Allekirjoitus",
+    "download.condition": "Lupaan ladata enintään yhden kuvan päivässä.",
     "font": "Fontti",
     "status.title": "Tilasivu",
     "status.notice": "Ennen vikailmoituksen tekemistä voit tarkistaa verkon nykyisen tilan.",
