--- a/src/locales/fr.json
+++ b/src/locales/fr.json
@@ -27,9 +27,10 @@
     "subscribe": "S'abonner",
     "unsubscribe": "Se désabonner",
     "rss-feed": "Flux RSS",
-    "copyright.title": "Droit d'auteur",
-    "copyright.content": "Le contenu est sous licence",
-    "copyright.source": "Le code source est sous licence",
+    "copyright": "Droit d'auteur",
+    "copyright.under": "sous licence",
+    "copyright.content": "Le contenu est {{copyright.under}}",
+    "copyright.source": "Le code source est {{copyright.under}}",
     "copyright.third-parties.link": "autres",
     "copyright.third-parties.title": "Contenu tiers",
     "copyright.third-parties.details": "Ce site web comprend les images suivantes :",
@@ -37,9 +38,14 @@
     "copyright.third-parties.license": "Licence",
     "copyright.third-parties.icon": "Icône",
     "copyright.third-parties.icon.creator": "Réalisé par",
-    "copyright.third-parties.icon.distributor": "et distribué par",
+    "from": "disponible via",
     "copyright.third-parties.from": "Source",
     "copyright.third-parties.ionicons": "Autres icônes : ",
+    "copyright.agreed": "Je m'engage à respecter la licence.",
+    "download.title": "Télécharger la photo pleine grandeur",
+    "download.photo": "Télécharger la photo",
+    "download.signature": "Signature",
+    "download.condition": "J'accepte de ne pas télécharger plus d'une photo par jour.",
     "font": "Police",
     "status.title": "Page d'état",
     "status.notice": "Avant de signaler un bogue, tu peux vérifier l'état actuel du réseau.",
