--- a/src/locales/en.json
+++ b/src/locales/en.json
@@ -27,9 +27,10 @@
     "subscribe": "Subscribe",
     "unsubscribe": "Unsubscribe",
     "rss-feed": "RSS Feed",
-    "copyright.title": "Copyright",
-    "copyright.content": "The content is licensed under",
-    "copyright.source": "The source code is licensed under",
+    "copyright": "Copyright",
+    "copyright.under": "licensed under",
+    "copyright.content": "The content is {{copyright.under}}",
+    "copyright.source": "The source code is {{copyright.under}}",
     "copyright.third-parties.link": "others",
     "copyright.third-parties.title": "Third Party Licensed Content",
     "copyright.third-parties.details": "This website includes the following images.",
@@ -37,9 +38,14 @@
     "copyright.third-parties.license": "License",
     "copyright.third-parties.icon": "Icon",
     "copyright.third-parties.icon.creator": "Made by",
-    "copyright.third-parties.icon.distributor": "from",
+    "from": "from",
     "copyright.third-parties.from": "From",
     "copyright.third-parties.ionicons": "Other icons: ",
+    "copyright.agreed": "I agree to comply with the license.",
+    "download.title": "Download Full Size Photo",
+    "download.photo": "Download Photo",
+    "download.signature": "Signature",
+    "download.condition": "I agree not to download more than one photo per day.",
     "font": "Font",
     "status.title": "Status Page",
     "status.notice": "Before reporting a bug, you could check the current network status.",
