--- a/src/locales/en.json
+++ b/src/locales/en.json
@@ -183,5 +183,6 @@
     "cam.lon": "Longitude:",
     "cam.goto": "Locate with:",
     "first": "first",
-    "last": "last"
+    "last": "last",
+    "donate-zcash": "Donate with Zcash"
 }
