--- a/src/locales/fi.json
+++ b/src/locales/fi.json
@@ -183,5 +183,6 @@
     "cam.lon": "Pituusaste:",
     "cam.goto": "Paikana:",
     "first": "ensimmäinen",
-    "last": "viimeinen"
+    "last": "viimeinen",
+    "donate-zcash": "Lahjoittaa Zcashilla"
 }
