--- a/src/locales/fr.json
+++ b/src/locales/fr.json
@@ -183,5 +183,6 @@
     "cam.lon": "Longitude :",
     "cam.goto": "Localiser avec :",
     "first": "première",
-    "last": "dernière"
+    "last": "dernière",
+    "donate-zcash": "Faire un don en Zcash"
 }
