Add Stripe to privacy policy

--- a/src/locales/fi.json
+++ b/src/locales/fi.json
@@ -53,7 +53,7 @@
     "status.notice": "Ennen vikailmoituksen tekemistä voit tarkistaa verkon nykyisen tilan.",
     "status.link": "Käy tilasivulla",
     "privacy.title": "Yksityisyys on tärkeää",
-    "privacy.overview": "Ei yhtään jäljittäjää, ei yhtään mainosta, ei paskapuhetta! En käytä evästeitä tai seurantalaitteita enkä tallenna henkilökohtaisesti tunnistettavia tietojasi, ellet anna palautetta tai tilaa uutiskirjettä. Tällöin henkilötiedot siirretään minulle vapaaehtoisesti, tallennetaan automaattisesti ja niitä käytetään ainoastaan kiinnostuksesi arvostamiseen, pyyntösi käsittelyyn ja yhteydenpitoon. Tallennan IP-osoitteesi väliaikaisesti, kun otat minuun yhteyttä, tilaat uutiskirjeen tai peruutat sen. Käytän sitä toistuvien pyyntöjen automaattiseen estämiseen ja tallennan sen hashed- ja salatussa muodossa. Huomaa, että luotan kolmansien osapuolten ratkaisuihin, jotka saattavat kerätä henkilötietojasi. Tutustu niiden käytäntöihin saadaksesi lisätietoja.",
+    "privacy.overview": "Ei yhtään jäljittäjää, ei yhtään mainosta, ei paskapuhetta! En käytä evästeitä tai seurantalaitteita enkä tallenna henkilökohtaisesti tunnistettavia tietojasi, ellet anna palautetta tai tilaa uutiskirjettä. Tällöin henkilötiedot siirretään minulle vapaaehtoisesti, tallennetaan automaattisesti ja niitä käytetään ainoastaan kiinnostuksesi arvostamiseen, pyyntösi käsittelyyn ja yhteydenpitoon. Tallennan IP-osoitteesi väliaikaisesti, kun otat minuun yhteyttä, tilaat uutiskirjeen tai peruutat sen. Käytän sitä toistuvien pyyntöjen automaattiseen estämiseen ja tallennan sen hashed- ja salatussa muodossa. Huomaa, että luotan kolmansien osapuolten ratkaisuihin, jotka saattavat kerätä henkilötietojasi. Tutustu niiden käytäntöihin saadaksesi lisätietoja. Lahjoitukset käsitellään myös kolmannen osapuolen toimesta turvallisten tapahtumien varmistamiseksi, en pääse käsiksi luottokorttitietoihisi.",
     "privacy.third-parties.title": "Integroidut kolmannet osapuolet:",
     "privacy.third-parties.policy": "Lue tietosuojakäytäntö",
     "privacy.third-parties.host": "Tätä verkkosivustoa isännöi",
@@ -64,6 +64,7 @@
     "privacy.third-parties.bugs": "Vikoja kerää",
     "privacy.third-parties.cdn": "Jotkin skriptit toimittaa",
     "privacy.third-parties.captcha": "Roskapostin ja väärinkäytön suojattu",
+    "privacy.third-parties.card": "Maksukortit käsittelee",
     "privacy.contact": "Jos tarvitset lisävalaistusta, käytä yhteydenottolomaketta.",
     "social-networks": "Sosiaaliset verkostot",
     "cancel": "Peruuta",
