--- a/src/locales/fr.json
+++ b/src/locales/fr.json
@@ -53,7 +53,7 @@
     "status.notice": "Avant de signaler un bogue, tu peux vérifier l'état actuel du réseau.",
     "status.link": "Visiter la page d'état",
     "privacy.title": "La vie privée compte",
-    "privacy.overview": "Pas un tracker, pas une pub, elle est pas belle la vie !? je n'utilise pas de cookies ou de trackers et n'enregistre pas tes informations personnelles identifiables, sauf si tu donnes ton avis ou si tu t'abonnes aux nouvelles. Dans ce cas, les données personnelles me sont transmises volontairement, sont stockées automatiquement et ne sont utilisées que dans le but d'apprécier ton intérêt, de traiter ta demande et de prendre contact avec toi. Je sauvegarde également ton adresse IP temporairement lorsque tu me contactes, t'abonnes ou te désabonnes des nouvelles. Cela afin de bloquer automatiquement les demandes répétitives, et je l'enregistre sous forme hachée et chiffrée. Notons cependant que je m'appuie sur des solutions tierces qui peuvent collecter tes informations personnelles identifiables. Je t'invite à lire leurs politiques pour plus d'informations.",
+    "privacy.overview": "Pas un tracker, pas une pub, elle est pas belle la vie !? je n'utilise pas de cookies ou de trackers et n'enregistre pas tes informations personnelles identifiables, sauf si tu donnes ton avis ou si tu t'abonnes aux nouvelles. Dans ce cas, les données personnelles me sont transmises volontairement, sont stockées automatiquement et ne sont utilisées que dans le but d'apprécier ton intérêt, de traiter ta demande et de prendre contact avec toi. Je sauvegarde également ton adresse IP temporairement lorsque tu me contactes, t'abonnes ou te désabonnes des nouvelles. Cela afin de bloquer automatiquement les demandes répétitives, et je l'enregistre sous forme hachée et chiffrée. Notons cependant que je m'appuie sur des solutions tierces qui peuvent collecter tes informations personnelles identifiables. Je t'invite à lire leurs politiques pour plus d'informations. Les dons sont également gérés par un tiers pour garantir la sécurité des transactions. Je ne peux pas accéder aux détails de ta carte bancaire.",
     "privacy.third-parties.title": " Tiers intégrés :",
     "privacy.third-parties.policy": "Lire la politique de confidentialité",
     "privacy.third-parties.host": "Ce site web est hébergé chez",
@@ -64,6 +64,7 @@
     "privacy.third-parties.bugs": "Les bogues sont collectés par",
     "privacy.third-parties.cdn": "Certains scripts sont fournis par",
     "privacy.third-parties.captcha": "Protection contre le spam et les abus par",
+    "privacy.third-parties.card": "Les cartes de paiement sont traitées par",
     "privacy.contact": "Si t'as besoin de plus d'informations, n'hésites pas à utiliser le formulaire de contact.",
     "social-networks": "Réseaux sociaux",
     "cancel": "Annuler",
