--- a/src/locales/en.json
+++ b/src/locales/en.json
@@ -82,7 +82,7 @@
     "applause.feedback.fail.429": "Sorry, I couldn't handle so much jubilation! 😱 Try again later.",
     "no-result-try-sth-else": "No result, please try something else.",
     "back-to-photo.tooltip": "Back to the photography or story",
-    "not-found.message": "Got lost?",
+    "not-found.message": "The page you try to see does not exist or I failed to find its content.",
     "not-found.action": "Visit the main page",
     "photo.title": "Photography",
     "photo.open-story.tooltip": "Read the story",
