--- a/src/locales/fi.json
+++ b/src/locales/fi.json
@@ -82,7 +82,7 @@
     "applause.feedback.fail.429": "Anteeksi, en pystynyt käsittelemään niin paljon riemua! 😱 Kokeile myöhemmin uudelleen.",
     "no-result-try-sth-else": "Ei tulosta, kokeile jotain muuta.",
     "back-to-photo.tooltip": "Takaisin valokuvaukseen tai tarinaan",
-    "not-found.message": "Eksyitkö?",
+    "not-found.message": "Sivua, jota yrität tarkastella, ei ole olemassa tai en löytänyt sen sisältöä.",
     "not-found.action": "Käy pääsivulla",
     "photo.title": "Valokuvaus",
     "photo.open-story.tooltip": "Lue tarina",
