--- a/src/locales/fr.json
+++ b/src/locales/fr.json
@@ -82,7 +82,7 @@
     "applause.feedback.fail.429": "Désolé, c'est trop d'amour pour un seul homme ! 😱 Essaie plus tard.",
     "no-result-try-sth-else": "Pas de bol, aucun résultat... essaye autre chose.",
     "back-to-photo.tooltip": "revenir à la photographie ou à l'aventure",
-    "not-found.message": "Bah, t'es perdus ?",
+    "not-found.message": "La page que t'essaies de voir n'existe pas ou je n'ai pas réussi à trouver son contenu.",
     "not-found.action": "Visites la page principale",
     "photo.title": "Photographie",
     "photo.open-story.tooltip": "Lire l'aventure",
