Highlight switch to new story

--- a/src/locales/en.json
+++ b/src/locales/en.json
@@ -190,5 +190,6 @@
     "donate": "Donate",
     "donate-zcash": "{{donate}} with Zcash",
     "donate-bat": "{{donate}} with Brave",
-    "donate-card": "{{donate}} with card"
+    "donate-card": "{{donate}} with card",
+    "finished-album": "You have just finished the album, click here to read "
 }
