--- a/src/locales/fi.json
+++ b/src/locales/fi.json
@@ -190,5 +190,6 @@
     "donate": "Lahjoita",
     "donate-zcash": "{{donate}} Zcashilla",
     "donate-bat": "{{donate}} Brave-selaimella",
-    "donate-card": "{{donate}} kortilla"
+    "donate-card": "{{donate}} kortilla",
+    "finished-album": "Olet juuri lopettanut albumin, klikkaa tästä lukea "
 }
