Mobile: download modal

--- a/src/locales/en.json
+++ b/src/locales/en.json
@@ -45,9 +45,8 @@
     "copyright.third-parties.ionicons": "Other icons: ",
     "copyright.agreed": "I agree to comply with the license.",
     "download.title": "Download Full Size Photo",
-    "download.photo": "Download Photo",
+    "download": "Download",
     "download.signature": "Signature",
-    "download.condition": "I agree not to download more than one photo per day.",
     "font": "Font",
     "status.title": "Status Page",
     "status.notice": "Before reporting a bug, you could check the current network status.",
