--- a/src/locales/fr.json
+++ b/src/locales/fr.json
@@ -45,9 +45,8 @@
     "copyright.third-parties.ionicons": "Autres icônes : ",
     "copyright.agreed": "Je m'engage à respecter la licence.",
     "download.title": "Télécharger la photo pleine grandeur",
-    "download.photo": "Télécharger la photo",
+    "download": "Télécharger",
     "download.signature": "Signature",
-    "download.condition": "J'accepte de ne pas télécharger plus d'une photo par jour.",
     "font": "Police",
     "status.title": "Page d'état",
     "status.notice": "Avant de signaler un bogue, tu peux vérifier l'état actuel du réseau.",
