--- a/src/locales/fi.json
+++ b/src/locales/fi.json
@@ -45,9 +45,8 @@
     "copyright.third-parties.ionicons": "Muut kuvakkeet: ",
     "copyright.agreed": "Sitoudun noudattamaan lisenssiä.",
     "download.title": "Lataa täysikokoinen valokuva",
-    "download.photo": "Lataa valokuva",
+    "download": "Lataa",
     "download.signature": "Allekirjoitus",
-    "download.condition": "Lupaan ladata enintään yhden kuvan päivässä.",
     "font": "Fontti",
     "status.title": "Tilasivu",
     "status.notice": "Ennen vikailmoituksen tekemistä voit tarkistaa verkon nykyisen tilan.",
