Mobile: new line on specific long lines

--- a/src/locales/fi.json
+++ b/src/locales/fi.json
@@ -56,10 +56,10 @@
     "privacy.third-parties.title": "Integroidut kolmannet osapuolet:",
     "privacy.third-parties.policy": "Lue tietosuojakäytäntö",
     "privacy.third-parties.host": "Tätä verkkosivustoa isännöi",
-    "privacy.third-parties.tmpdb": "Anonymisoitu IP-osoitteesi väliaikaisesti tallennetaan",
+    "privacy.third-parties.tmpdb": "Anonymisoitu IP-osoitteesi tallennetaan",
     "privacy.third-parties.emails": "Sähköpostit käsittelee",
     "privacy.third-parties.messages": "Viestisi tallennetaan",
-    "privacy.third-parties.maps": "Karttarenderöijän ja laatat toimittaa",
+    "privacy.third-parties.maps": "Kartat on toimittaa",
     "privacy.third-parties.bugs": "Vikoja kerää",
     "privacy.third-parties.cdn": "Jotkin skriptit toimittaa",
     "privacy.third-parties.captcha": "Roskapostin ja väärinkäytön suojattu",
