--- a/src/locales/fr.json
+++ b/src/locales/fr.json
@@ -56,10 +56,10 @@
     "privacy.third-parties.title": " Tiers intégrés :",
     "privacy.third-parties.policy": "Lire la politique de confidentialité",
     "privacy.third-parties.host": "Ce site web est hébergé chez",
-    "privacy.third-parties.tmpdb": "Ton adresse IP anonymisée est temporairement stockés chez",
+    "privacy.third-parties.tmpdb": "Ton adresse IP anonymisée est stockés chez",
     "privacy.third-parties.emails": "Les couriels sont traités par",
     "privacy.third-parties.messages": "Les messages sont stoqués chez",
-    "privacy.third-parties.maps": "Le moteur de rendu des cartes et les tuiles sont fournis par",
+    "privacy.third-parties.maps": "Les cartes sont fournis par",
     "privacy.third-parties.bugs": "Les bogues sont collectés par",
     "privacy.third-parties.cdn": "Certains scripts sont fournis par",
     "privacy.third-parties.captcha": "Protection contre le spam et les abus par",
