--- a/src/locales/en.json
+++ b/src/locales/en.json
@@ -56,10 +56,10 @@
     "privacy.third-parties.title": "Integrated Third Parties:",
     "privacy.third-parties.policy": "Read the privacy policy",
     "privacy.third-parties.host": "This website is hosted by",
-    "privacy.third-parties.tmpdb": "Your anonymized IP address is temporarily stored by",
+    "privacy.third-parties.tmpdb": "Your anonymized IP address is stored by",
     "privacy.third-parties.emails": "Emails are handled by",
     "privacy.third-parties.messages": "Your messages are stored by",
-    "privacy.third-parties.maps": "The map renderer and tiles are supplied by",
+    "privacy.third-parties.maps": "The maps are supplied by",
     "privacy.third-parties.bugs": "Bugs are collected by",
     "privacy.third-parties.cdn": "Some scripts are delivered by",
     "privacy.third-parties.captcha": "Spam and abuse protection by",
