--- a/src/locales/en.json
+++ b/src/locales/en.json
@@ -127,6 +127,7 @@
     "map.control.pause-autopilot": "Pause autopilot",
     "map.control.loading-autopilot": "Acquiring data... Click to wander around",
     "map.control.rewind-autopilot": "Back to the starting point",
+    "map.control.finished-autopilot": "You've just finished the tour!",
     "map.control.faster": "Go faster",
     "map.control.slower": "Go slower",
     "map.control.select-layer": "Change the map theme to: ",
