API: remove Redis

--- a/src/locales/en.json
+++ b/src/locales/en.json
@@ -20,7 +20,6 @@
     "too-many-requests": "Too many requests!",
     "is-bot": "Are you human? \uD83E\uDD16",
     "wait": "Wait a sec",
-    "wait-minute": "Wait a minute",
     "thanks": "Thanks!",
     "newsletter": "Follow My Journey",
     "newsletter.what": "Personal notes related to backcountry.",
@@ -52,11 +51,10 @@
     "status.notice": "Before reporting a bug, you could check the current network status.",
     "status.link": "Visit the status page",
     "privacy.title": "Privacy Matters",
-    "privacy.overview": "No one tracker, no one ad, no bullshit! I do not use cookies or trackers and do not record your personally identifiable information unless you give a feedback or subscribe to the newsletter. In doing so personal data is voluntarily transferred to me, stored automagically and only used for the purpose of appreciating your interest, dealing with your request and getting in contact with you. I also save your IP address temporarily when you contact me, subscribe to or unsubscribe from the newsletter. I use it to automatically block repetitive requests, and save it in hashed and encrypted form. Notice that I rely on third party solutions that may collect your personally identifiable information. Please read their policies for further information. Donations are also handled by a third party to ensure secure transactions, I cannot access your credit card details.",
+    "privacy.overview": "No one tracker, no one ad, no bullshit! I do not use cookies or trackers and do not record your personally identifiable information unless you give a feedback or subscribe to the newsletter. In doing so personal data is voluntarily transferred to me, stored automagically and only used for the purpose of appreciating your interest, dealing with your request and getting in contact with you. Notice that I rely on third party solutions that may collect your personally identifiable information. Please read their policies for further information. Donations are also handled by a third party to ensure secure transactions, I cannot access your credit card details.",
     "privacy.third-parties.title": "Integrated Third Parties:",
     "privacy.third-parties.policy": "Read the privacy policy",
     "privacy.third-parties.host": "This website is hosted by",
-    "privacy.third-parties.tmpdb": "Your anonymized IP address is stored by",
     "privacy.third-parties.emails": "Emails are handled by",
     "privacy.third-parties.messages": "Your messages are stored by",
     "privacy.third-parties.maps": "The maps are supplied by",
