--- a/src/locales/fi.json
+++ b/src/locales/fi.json
@@ -20,7 +20,6 @@
     "too-many-requests": "Liian monta pyyntöä!",
     "is-bot": "Oletko ihminen? \uD83E\uDD16",
     "wait": "Odota",
-    "wait-minute": "Odota hetki",
     "thanks": "Kiitos!",
     "newsletter": "Seuraa matkaani",
     "newsletter.what": "henkilökohtaisia muistiinpanoja ulkoilmasta.",
@@ -52,11 +51,10 @@
     "status.notice": "Ennen vikailmoituksen tekemistä voit tarkistaa verkon nykyisen tilan.",
     "status.link": "Käy tilasivulla",
     "privacy.title": "Yksityisyys on tärkeää",
-    "privacy.overview": "Ei yhtään jäljittäjää, ei yhtään mainosta, ei paskapuhetta! En käytä evästeitä tai seurantalaitteita enkä tallenna henkilökohtaisesti tunnistettavia tietojasi, ellet anna palautetta tai tilaa uutiskirjettä. Tällöin henkilötiedot siirretään minulle vapaaehtoisesti, tallennetaan automaattisesti ja niitä käytetään ainoastaan kiinnostuksesi arvostamiseen, pyyntösi käsittelyyn ja yhteydenpitoon. Tallennan IP-osoitteesi väliaikaisesti, kun otat minuun yhteyttä, tilaat uutiskirjeen tai peruutat sen. Käytän sitä toistuvien pyyntöjen automaattiseen estämiseen ja tallennan sen hashed- ja salatussa muodossa. Huomaa, että luotan kolmansien osapuolten ratkaisuihin, jotka saattavat kerätä henkilötietojasi. Tutustu niiden käytäntöihin saadaksesi lisätietoja. Lahjoitukset käsitellään myös kolmannen osapuolen toimesta turvallisten tapahtumien varmistamiseksi, en pääse käsiksi luottokorttitietoihisi.",
+    "privacy.overview": "Ei yhtään jäljittäjää, ei yhtään mainosta, ei paskapuhetta! En käytä evästeitä tai seurantalaitteita enkä tallenna henkilökohtaisesti tunnistettavia tietojasi, ellet anna palautetta tai tilaa uutiskirjettä. Tällöin henkilötiedot siirretään minulle vapaaehtoisesti, tallennetaan automaattisesti ja niitä käytetään ainoastaan kiinnostuksesi arvostamiseen, pyyntösi käsittelyyn ja yhteydenpitoon. Huomaa, että luotan kolmansien osapuolten ratkaisuihin, jotka saattavat kerätä henkilötietojasi. Tutustu niiden käytäntöihin saadaksesi lisätietoja. Lahjoitukset käsitellään myös kolmannen osapuolen toimesta turvallisten tapahtumien varmistamiseksi, en pääse käsiksi luottokorttitietoihisi.",
     "privacy.third-parties.title": "Integroidut kolmannet osapuolet:",
     "privacy.third-parties.policy": "Lue tietosuojakäytäntö",
     "privacy.third-parties.host": "Tätä verkkosivustoa isännöi",
-    "privacy.third-parties.tmpdb": "Anonymisoitu IP-osoitteesi tallennetaan",
     "privacy.third-parties.emails": "Sähköpostit käsittelee",
     "privacy.third-parties.messages": "Viestisi tallennetaan",
     "privacy.third-parties.maps": "Kartat on toimittaa",
