--- a/src/locales/fr.json
+++ b/src/locales/fr.json
@@ -20,7 +20,6 @@
     "too-many-requests": "Trop de demandes !",
     "is-bot": "Es-tu humain ? \uD83E\uDD16",
     "wait": "Minute papillon",
-    "wait-minute": "Minute bonhomme",
     "thanks": "Merci !",
     "newsletter": "Des Nouvelles !",
     "newsletter.what": "Notes personnelles liées à la nature.",
@@ -52,11 +51,10 @@
     "status.notice": "Avant de signaler un bogue, tu peux vérifier l'état actuel du réseau.",
     "status.link": "Visiter la page d'état",
     "privacy.title": "La vie privée compte",
-    "privacy.overview": "Pas un tracker, pas une pub, elle est pas belle la vie !? je n'utilise pas de cookies ou de trackers et n'enregistre pas tes informations personnelles identifiables, sauf si tu donnes ton avis ou si tu t'abonnes aux nouvelles. Dans ce cas, les données personnelles me sont transmises volontairement, sont stockées automatiquement et ne sont utilisées que dans le but d'apprécier ton intérêt, de traiter ta demande et de prendre contact avec toi. Je sauvegarde également ton adresse IP temporairement lorsque tu me contactes, t'abonnes ou te désabonnes des nouvelles. Cela afin de bloquer automatiquement les demandes répétitives, et je l'enregistre sous forme hachée et chiffrée. Notons cependant que je m'appuie sur des solutions tierces qui peuvent collecter tes informations personnelles identifiables. Je t'invite à lire leurs politiques pour plus d'informations. Les dons sont également gérés par un tiers pour garantir la sécurité des transactions. Je ne peux pas accéder aux détails de ta carte bancaire.",
+    "privacy.overview": "Pas un tracker, pas une pub, elle est pas belle la vie !? je n'utilise pas de cookies ou de trackers et n'enregistre pas tes informations personnelles identifiables, sauf si tu donnes ton avis ou si tu t'abonnes aux nouvelles. Dans ce cas, les données personnelles me sont transmises volontairement, sont stockées automatiquement et ne sont utilisées que dans le but d'apprécier ton intérêt, de traiter ta demande et de prendre contact avec toi. Notons cependant que je m'appuie sur des solutions tierces qui peuvent collecter tes informations personnelles identifiables. Je t'invite à lire leurs politiques pour plus d'informations. Les dons sont également gérés par un tiers pour garantir la sécurité des transactions. Je ne peux pas accéder aux détails de ta carte bancaire.",
     "privacy.third-parties.title": " Tiers intégrés :",
     "privacy.third-parties.policy": "Lire la politique de confidentialité",
     "privacy.third-parties.host": "Ce site web est hébergé chez",
-    "privacy.third-parties.tmpdb": "Ton adresse IP anonymisée est stockés chez",
     "privacy.third-parties.emails": "Les couriels sont traités par",
     "privacy.third-parties.messages": "Les messages sont stoqués chez",
     "privacy.third-parties.maps": "Les cartes sont fournis par",
