Automate WebTrack discovery

--- a/src/locales/en.json
+++ b/src/locales/en.json
@@ -58,7 +58,7 @@
     "privacy.third-parties.emails": "Emails are handled by",
     "privacy.third-parties.messages": "Your messages are stored by",
     "privacy.third-parties.maps": "The maps are supplied by",
-    "privacy.third-parties.bugs": "Bugs are collected by",
+    "privacy.third-parties.bugs": "Browser bugs are collected by",
     "privacy.third-parties.cdn": "Some scripts are delivered by",
     "privacy.third-parties.captcha": "Spam and abuse protection by",
     "privacy.third-parties.card": "Payment cards are handled by",
