--- a/src/locales/fi.json
+++ b/src/locales/fi.json
@@ -58,7 +58,7 @@
     "privacy.third-parties.emails": "Sähköpostit käsittelee",
     "privacy.third-parties.messages": "Viestisi tallennetaan",
     "privacy.third-parties.maps": "Kartat on toimittaa",
-    "privacy.third-parties.bugs": "Vikoja kerää",
+    "privacy.third-parties.bugs": "selaimen virheet kerännyt",
     "privacy.third-parties.cdn": "Jotkin skriptit toimittaa",
     "privacy.third-parties.captcha": "Roskapostin ja väärinkäytön suojattu",
     "privacy.third-parties.card": "Maksukortit käsittelee",
