Improve feedback on server error

--- a/src/locales/fi.json
+++ b/src/locales/fi.json
@@ -19,6 +19,8 @@
     "invalid-message": "Sano jotain!",
     "too-many-requests": "Liian monta pyyntöä!",
     "is-bot": "Oletko ihminen? \uD83E\uDD16",
+    "unknown-error": "Yritä myöhemmin uudelleen.",
+    "unknown-error-verbose": "Tapahtui odottamaton palvelinvirhe! \uD83D\uDE35",
     "wait": "Odota",
     "thanks": "Kiitos!",
     "newsletter": "Seuraa matkaani",
@@ -26,7 +28,7 @@
     "newsletter.when": "Kun uutta sisältöä on saatavilla, ei usein.",
     "newsletter.trash": "Voit peruuttaa tilauksen milloin tahansa.",
     "subscribe": "Tilaa",
-    "unsubscribe": "Peruuttaa tilauksen",
+    "unsubscribe": "Poistuminen",
     "rss-feed": "RSS-syöte",
     "copyright": "Tekijänoikeus",
     "copyright.under": "on saatavilla",
