--- a/src/locales/en.json
+++ b/src/locales/en.json
@@ -19,6 +19,8 @@
     "invalid-message": "Say something!",
     "too-many-requests": "Too many requests!",
     "is-bot": "Are you human? \uD83E\uDD16",
+    "unknown-error": "Try again later.",
+    "unknown-error-verbose": "An unexpected server error happened! \uD83D\uDE35",
     "wait": "Wait a sec",
     "thanks": "Thanks!",
     "newsletter": "Follow My Journey",
